<resources>
    <string name="app_name">RecycleDump</string>
    <string name="title_activity_main">RecycleDump</string>
    <string name="title_activity_settings">Settings</string>

    <string name="facebook_application_id" translatable="false">439984783041757</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb439984783041757</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_recycle_info">Recycle Info Activity</string>
    <string name="what_s_on_the_agenda_today">What\'s on the agenda today?</string>
    <string name="title_activity_locations">Disposal Locations</string>
    <string name="item_name">Item name</string>
    <string name="save_item">Save item</string>
    <string name="sign_in_cancelled">Sign in cancelled.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="unknown_error">Oops, something went wrong.</string>
    <string name="please_describe_your_item">Please describe your item to find a place for it.</string>
    <string name="recyclable">Recyclable</string>
    <string name="non_recyclable">Non-recyclable</string>

    <string name="recycle_info_category1">Paper</string>
    <string name="recycle_info_category1_desc">including newsprint; ledger paper; computer paper; corrugated cardboard; and mixed paper.</string>
    <string name="recycle_info_category2">Reusable goods</string>
    <string name="recycle_info_category2_desc">including intact or repairable home or industrial appliances; household goods; clothing; intact materials in demolition debris, such as lumber; building materials such as doors, windows, cabinets, and sinks; business supplies and equipment; lighting fixtures; and any manufactured item or naturally occurring object that can be repaired or used again as is.</string>
    <string name="recycle_info_category3">Metals</string>
    <string name="recycle_info_category3_desc">including both ferrous and nonferrous, including cans; parts from abandoned vehicles; plumbing; fences; metal doors and screens; tools; machinery; and any other discarded metal objects.</string>
    <string name="recycle_info_category4">Glass</string>
    <string name="recycle_info_category4_desc">including glass containers and window glass.</string>
    <string name="recycle_info_category5">Textiles</string>
    <string name="recycle_info_category5_desc">including nonreusable clothing; upholstery; and pieces of fabric.</string>
    <string name="recycle_info_category6">Plastics</string>
    <string name="recycle_info_category6_desc">including beverage containers; plastic packaging; plastic cases of consumer goods such as telephones or electronic equipment; films and tires</string>
    <string name="recycle_info_category7">Plant debris</string>
    <string name="recycle_info_category7_desc">including leaves and cuttings; trimmings from trees, shrubs, and grass; whole plants, and sawdust.</string>
    <string name="recycle_info_category8">Putrescibles</string>
    <string name="recycle_info_category8_desc">including animal, fruit, and vegetable debris; cooked food; manures; offal; and sewage sludge.</string>
    <string name="recycle_info_category9">Wood</string>
    <string name="recycle_info_category9_desc">including unreusable lumber; tree rounds; and pallets.</string>
    <string name="recycle_info_category10">Ceramics</string>
    <string name="recycle_info_category10_desc">\nincluding rock; tile; china; brick; concrete; plaster; and asphalt.</string>
    <string name="recycle_info_category11">Soils</string>
    <string name="recycle_info_category11_desc">including excavation soils from barren or developed land; and excess soils from people\\'s yards.</string>
    <string name="recycle_info_category12">Chemicals</string>
    <string name="recycle_info_category12_desc">including acids; bases; solvents; fuels; lubricating oils; and medicines.</string>
    <string name="weight_kg">Weight (kilograms)</string>
    <string name="volume_m_cubed">Volume (cubic meters)</string>
    <string name="home">Home</string>
    <string name="my_items">My items</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="sign_out">Sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_category">Recycle category:</string>
    <string name="add_an_item">Add an item</string>
    <string name="collect">Collect</string>
    <string name="contact">Contact</string>
    <string name="please_enter_a_valid_name">Please enter a valid name.</string>
    <string name="help">Help</string>
    <string name="maximum_distance_to_track_disposal_places">Maximum distance to track disposal places</string>
    <string name="radius">Radius</string>
    <string name="e_mail">E-mail</string>
    <string name="mobile">Mobile</string>
    <string name="receive_a_notification_whenever">Receive a notification whenever a new place accepting one of your current items becomes available</string>
    <string name="notifications">Notifications</string>
    <string name="inspirational_quote">Recycling turns things into other things… magic!</string>
    <string name="nature_emoji">Nature emoji</string>
    <string name="contact_p1">Your feedback and concerns are important to the developer. Please write to uxcedr@gmail.com</string>
    <string name="contact_p2">If you are having technical difficulties or would like help with the app, try the Help section from the main screen.</string>
    <string name="title_activity_help">Help</string>
    <string name="help_app_desc">RecycleDump is a location-based app linking waste disposers to collectors and disposal points. We refer to these as \'disposal opportunities\'. These could be anything from scrap metal collectors and clothing bins to public skips and individuals making use of recyclables. \n\nEach has a classification of categories of waste it will accept. If you\'d like to find a disposal opportunity for your waste items, simply add them to your library within the app. You\'ll then be shown the nearest points that will take your item, or be notified when such disposal opportunity becomes available. \n\nThe real power of the app is linking together producers and consumers of waste, facilitating a more efficient waste collection system for everyone.</string>
    <string name="how_does_the_app_work">How does the app work?</string>
    <string name="i_just_want_to_get_rid_of_something">I just want to get rid of something, what do I do?</string>
    <string name="help_disposal_tutorial">Head to the main screen and select the green \'Dispose of something\' button. Then, choose whether you want to recycle or dump your item. \n\nFill out the details of your item, most importantly the category so we can match you to the appropriate locations. \n\nOnce you\'ve saved your item head to your items library from the side menu on the left, where your item should be displayed. By clicking on its cell, you can check the map for surrounding locations/collectors that accept your item. \n\nIt\'s no problem if there are no disposal opportunities initially, we\'ll notify you as soon as one comes up.</string>
    <string name="where_does_the_disposal_opportunity_data_come_from">Where does the disposal opportunity data come from?</string>
    <string name="help_data_contribution">Details of locations and collectors are contributed to the app in one of two ways: \n\n1. Us obtaining data directly from local councils and pulling it from location-based networks such as Neighbourly. \n\n2. Private collectors of waste/recyclables can upload their information through the app, as well as users who have found useful disposal opportunities themselves. This option enables a truly collaborative approach to recycling and waste management.</string>
    <string name="what_s_coming_next_for_recycledump">What\'s coming next for RecycleDump?</string>
    <string name="help_whats_next">Future releases will focus on collectors and locations; letting them create and manage their disposal opportunity. If you are such a user, you\'ll have access to fine-grained control of your listing.</string>
    <string name="log_in">Log in</string>
    <string name="recycling">Recycling</string>
    <string name="accepts_your_item_type">Accepts your item type</string>
    <string name="business_name">Business name</string>
    <string name="availability_opening_hours">Availability/Opening Hours:</string>
    <string name="photo_of_your_business">Photo of your business</string>
    <string name="give_this_place_a_name">Give this place a name</string>
    <string name="can_you_dump_or_recycle_here">Can you dump or recycle here?</string>
    <string name="recycle">recycle</string>
    <string name="dump">dump</string>
    <string name="what_types_of_item_does_this_place_accept">What types of item does this place accept?</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="phone_number">Phone number</string>
    <string name="select">Select</string>
    <string name="your_location">Your location:</string>
</resources>
