<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_menu_items"
            android:title="@string/my_items" />
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/collect" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>


</menu>
