<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.urgentx.recycledump.view.ContactFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/stdMargin2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/stdMargin1"
        android:textStyle="bold"
        android:textSize="@dimen/mediumText1"
        android:text="@string/contact" />

    <TextView
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/stdMargin1"
        android:text="@string/contact_p1"/>

    <TextView
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_p2"/>

</LinearLayout>
