<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.urgentx.recycledump.view.CreateCollectorActivity"
    tools:showIn="@layout/activity_create_collector">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/stdMargin1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorBtnGrey">

                <ImageView
                    android:id="@+id/createCollectorImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/photo_of_your_business"
                    android:scaleType="centerCrop" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/createCollectorPhotoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/stdMargin1"
                    android:backgroundTint="@color/colorPrimary"
                    android:tint="@color/colorBtnTintLight"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/stdMargin2"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/createCollectorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/stdMargin1"
                    android:ems="10"
                    android:hint="@string/business_name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/stdMargin1"
                android:text="@string/availability_opening_hours" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/createCollectorMondayBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monday" />

                <Button
                    android:id="@+id/createCollectorTuesdayBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tuesday" />

                <Button
                    android:id="@+id/createCollectorWednesdayBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wednesday" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/createCollectorThursdayBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/thursday" />

                <Button
                    android:id="@+id/createCollectorFridayBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/friday" />

                <Button
                    android:id="@+id/createCollectorSaturdayBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/saturday" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/createCollectorSundayBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="@string/sunday" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/stdMargin2"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/createCollectorPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/stdMargin1"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/createCollectorDoneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/stdMargin1"
        android:text="@string/fui_done" />

</RelativeLayout>
