<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.urgentx.recycledump.view.RecycleInfoActivity"
    tools:showIn="@layout/activity_dump_info">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/stdMargin1">

            <EditText
                android:id="@+id/dumpInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/stdMargin1"
                android:ems="10"
                android:hint="@string/item_name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/stdMargin1"
                android:text="@string/choose_category" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/dumpInfoCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/stdMargin1" />

            <EditText
                android:id="@+id/dumpInfoWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/stdMargin1"
                android:hint="@string/weight_kg"
                android:inputType="number" />

            <EditText
                android:id="@+id/dumpInfoVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/stdMargin1"
                android:hint="@string/volume_m_cubed"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/dumpInfoSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/stdMargin1"
        android:layout_marginRight="@dimen/stdMargin1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save_item" />

</RelativeLayout>
