<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/stdMargin1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.urgentx.recycledump.view.CreateCollectorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorBtnGrey">

        <ImageView
            android:id="@+id/createCollectorImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/stdMargin2"
            android:scaleType="centerCrop"
            android:contentDescription="@string/photo_of_your_business" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/createCollectorPhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/stdMargin1"
            android:backgroundTint="@color/colorPrimary"
            android:tint="@color/colorBtnTintLight"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/createCollectorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/stdMargin1"
            android:ems="10"
            android:hint="@string/business_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/stdMargin1"
        android:text="@string/availability_opening_hours" />

    <Button
        android:id="@+id/createCollectorMondayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"/>




</LinearLayout>
